overflow scroll fixed + star bg animation optimization

--- a/scss/component/_starbg.scss
+++ b/scss/component/_starbg.scss
@@ -1,10 +1,100 @@
+// // Import Compass
+
+// // Define function for generating multiple box shadows
+// @function multiple-box-shadow($n) {
+//   $value: "#{random(2000)}px #{random(2000)}px #FFF";
+//   @for $i from 2 through $n {
+//     $value: "#{$value} , #{random(2000)}px #{random(2000)}px #FFF";
+//   }
+//   @return unquote($value);
+// }
+
+// // Define variables for different shadow sizes
+// $shadows-small: multiple-box-shadow(300);
+// $shadows-medium: multiple-box-shadow(300);
+// $shadows-big: multiple-box-shadow(300);
+
+// // Define styles for HTML and body elements
+// // html {
+// //   height: 100%;
+// //   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+// //   overflow: hidden;
+// // }
+
+// // Define styles for the #stars element
+// #stars {
+//   width: 1px;
+//   height: 1px;
+//   background: transparent;
+//   box-shadow: $shadows-small;
+//   animation: animStar 50s linear infinite;
+
+//   &:after {
+//     content: " ";
+//     position: absolute;
+//     top: 2000px;
+//     width: 1px;
+//     height: 1px;
+//     background: transparent;
+//     box-shadow: $shadows-small;
+//   }
+// }
+
+// // Define styles for the #stars2 element
+// #stars2 {
+//   width: 2px;
+//   height: 2px;
+//   background: transparent;
+//   box-shadow: $shadows-medium;
+//   animation: animStar 100s linear infinite;
+
+//   &:after {
+//     content: " ";
+//     position: absolute;
+//     top: 2000px;
+//     width: 2px;
+//     height: 2px;
+//     background: transparent;
+//     box-shadow: $shadows-medium;
+//   }
+// }
+
+// // Define styles for the #stars3 element
+// #stars3 {
+//   width: 3px;
+//   height: 3px;
+//   background: transparent;
+//   box-shadow: $shadows-big;
+//   animation: animStar 150s linear infinite;
+
+//   &:after {
+//     content: " ";
+//     position: absolute;
+//     top: 2000px;
+//     width: 3px;
+//     height: 3px;
+//     background: transparent;
+//     box-shadow: $shadows-big;
+//   }
+// }
+
+// // Define animation for stars
+// @keyframes animStar {
+//   from {
+//     transform: translateY(0px);
+//   }
+//   to {
+//     transform: translateY(-2000px);
+//   }
+// }
+
 // Import Compass
 
 // Define function for generating multiple box shadows
 @function multiple-box-shadow($n) {
-  $value: "#{random(2000)}px #{random(2000)}px #FFF";
+  $value: "#{random(100)}vh #{random(100)}vh #FFF";
   @for $i from 2 through $n {
-    $value: "#{$value} , #{random(2000)}px #{random(2000)}px #FFF";
+    $value: "#{$value} , #{random(100)}vw #{random(100)}vw #FFF";
   }
   @return unquote($value);
 }
@@ -32,7 +122,7 @@ $shadows-big: multiple-box-shadow(200);
   &:after {
     content: " ";
     position: absolute;
-    top: 200px;
+    top: 100vh;
     width: 1px;
     height: 1px;
     background: transparent;
@@ -51,7 +141,7 @@ $shadows-big: multiple-box-shadow(200);
   &:after {
     content: " ";
     position: absolute;
-    top: 200px;
+    top: 100vh;
     width: 2px;
     height: 2px;
     background: transparent;
@@ -70,7 +160,7 @@ $shadows-big: multiple-box-shadow(200);
   &:after {
     content: " ";
     position: absolute;
-    top: 200px;
+    top: 100vh;
     width: 3px;
     height: 3px;
     background: transparent;
@@ -84,6 +174,6 @@ $shadows-big: multiple-box-shadow(200);
     transform: translateY(0px);
   }
   to {
-    transform: translateY(-2000px);
+    transform: translateY(-100vh);
   }
 }
