--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,6 @@ html {
   //   height: 100dvh;
   //   for animation
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  overflow: hidden;
   color-scheme: dark;
 }
 
